# pr2_planning

./: .change_path.sh.swp  delete.sh  delete.sh~  dependencies.list  fbp_tests.yaml
sbpl/: CMakeLists.txt  manifest.xml
sbpl/benchmark_results/SE2benchmark/H_env/: benchmarkH1.txt  benchmarkH1.txt~  benchmarkH2.txt  benchmarkH2.txt~  benchmarkH3.txt~  benchmarkH4.txt  benchmarkH4.txt~  benchmarkH5.txt  benchmarkH5.txt~  benchmarkH6.txt  trial10.db  trial11.db  trial2.db  trial2.log~  trial3.db  trial3.log~  trial4.db  trial5.db  trial6.db  trial7.db  trial8.db  trial9.db
sbpl/benchmark_results/SE2benchmark/H_opp_diffeps/: trial1.db  trial2.db  trial3.db  trial4.db  trial5.db
sbpl/benchmark_results/SE2benchmark/H_same_diffeps/: trial1.db  trial2.db  trial3.db  trial4.db  trial5.db
sbpl/benchmark_results/SE2benchmark/Maze_env/: trial1.db  trial10.db  trial2.db  trial3.db  trial4.db  trial5.db  trial6.db  trial7.db  trial8.db  trial9.db
sbpl/benchmark_results/SE2benchmark/Passage_env/: trial1.db  trial10.db  trial2.db  trial3.db  trial4.db  trial5.db  trial6.db  trial7.db  trial8.db  trial9.db
sbpl/benchmark_results/SE2benchmark/benchmark_1_23/: trial1.db  trial10.db  trial11.db  trial12.db  trial13.db  trial14.db  trial15.db  trial16.db  trial17.db  trial18.db  trial19.db  trial2.db  trial20.db  trial21.db  trial22.db  trial23.db  trial24.db  trial25.db  trial26.db  trial27.db  trial28.db  trial29.db  trial3.db  trial30.db  trial31.db  trial32.db  trial4.db  trial5.db  trial6.db  trial7.db  trial8.db  trial9.db
sbpl/benchmark_results/SE2benchmark/benchmark_1_24/: trial1.db  trial10.db  trial11.db  trial12.db  trial13.db  trial14.db  trial15.db  trial16.db  trial17.db  trial18.db  trial19.db  trial2.db  trial20.db  trial21.db  trial22.db  trial23.db  trial24.db  trial25.db  trial26.db  trial27.db  trial28.db  trial29.db  trial3.db  trial30.db  trial31.db  trial32.db  trial4.db  trial5.db  trial6.db  trial7.db  trial8.db  trial9.db
sbpl/benchmark_results/SE2benchmark/benchmark_1_25/: trial1.db  trial10.db  trial11.db  trial12.db  trial13.db  trial14.db  trial15.db  trial16.db  trial17.db  trial18.db  trial19.db  trial2.db  trial20.db  trial21.db  trial22.db  trial23.db  trial24.db  trial25.db  trial26.db  trial27.db  trial28.db  trial29.db  trial3.db  trial30.db  trial31.db  trial32.db  trial33.db  trial34.db  trial35.db  trial36.db  trial37.db  trial38.db  trial39.db  trial4.db  trial40.db  trial5.db  trial6.db  trial7.db  trial8.db  trial9.db
sbpl/benchmark_results/SE2benchmark/benchmark_1_25(2)/: trial1.db  trial10.db  trial11.db  trial12.db  trial13.db  trial14.db  trial15.db  trial16.db  trial17.db  trial18.db  trial19.db  trial2.db  trial3.db  trial4.db  trial5.db  trial6.db  trial7.db  trial8.db  trial9.db
sbpl/benchmark_results/SE2benchmark/benchmark_1_25(3)/: trial.db  trial1.db  trial10.db  trial11.db  trial12.db  trial13.db  trial14.db  trial15.db  trial16.db  trial17.db  trial18.db  trial19.db  trial2.db  trial20.db  trial21.db  trial3.db  trial4.db  trial5.db  trial6.db  trial7.db  trial8.db  trial9.db
sbpl/benchmark_results/SE2benchmark/dump/: trial1.db  trial10.db  trial11.db  trial12.db  trial13.db  trial14.db  trial15.db  trial16.db  trial17.db  trial18.db  trial19.db  trial2.db  trial20.db  trial21.db  trial22.db  trial23.db  trial24.db  trial25.db  trial26.db  trial27.db  trial28.db  trial29.db  trial3.db  trial30.db  trial31.db  trial32.db  trial33.db  trial34.db  trial35.db  trial36.db  trial37.db  trial38.db  trial39.db  trial4.db  trial40.db  trial41.db  trial42.db  trial43.db  trial44.db  trial45.db  (+7 more)
sbpl/env_examples/ompl/Maze_planar/: Complex_planar_env.dae  Complex_planar_env.txt  H_planar_env.txt  Maze_planar.cfg.txt  Maze_planar_env.txt  Pasage_planar_env.txt  Passage_planar_env.txt  benchmarkH1.cfg.txt  benchmarkH10.cfg.txt  benchmarkH11.cfg.txt  benchmarkH12.cfg.txt  benchmarkH13.cfg.txt  benchmarkH14.cfg.txt  benchmarkH15.cfg.txt  benchmarkH16.cfg.txt  benchmarkH17.cfg.txt  benchmarkH18.cfg.txt  benchmarkH19.cfg.txt  benchmarkH2.cfg.txt  benchmarkH20.cfg.txt  benchmarkH21.cfg.txt  benchmarkH22.cfg.txt  benchmarkH23.cfg.txt  benchmarkH24.cfg.txt  benchmarkH25.cfg.txt  benchmarkH26.cfg.txt  benchmarkH27.cfg.txt  benchmarkH28.cfg.txt  benchmarkH29.cfg.txt  benchmarkH3.cfg.txt  benchmarkH4.cfg.txt  benchmarkH5.cfg.txt  benchmarkH6.cfg.txt  benchmarkH7.cfg.txt  benchmarkH8.cfg.txt  benchmarkH9.cfg.txt  benchmarkMaze1.cfg.txt  benchmarkMaze10.cfg.txt  benchmarkMaze2.cfg.txt  benchmarkMaze3.cfg.txt  (+60 more)
sbpl/include/sbpl/: headers.h
sbpl/include/sbpl/discrete_space_information/: Chameleon.h  environment_ompl.h  environment_ppma.h
sbpl/include/sbpl/planners/: _ppma.h.swp  ppma.h  ppma_control.h
sbpl/include/sbpl/utils/: 2Dgridsearch.h  (+2 more)
sbpl/matlab/mprim/: genmprim_unicycle.m  genmprim_unicycleplussidewaysplusbackturnplusdiag.m  unicycle_alldirs.mprim  unicycle_alldirs_0_1.mprim  unicycle_alldirs_0_25.mprim  unicycle_maze_ompl.mprim  unicycle_ompl_maze_5cm.mprim
sbpl/matlab/visualization/: out.ogv  visualize.py
sbpl/src/benchmarks/: SE2benchmark.cpp  _SE2benchmark.cpp.swp  benchmark_batch.cpp  cfg_benchm.cpp
sbpl/src/discrete_space_information/: Chameleon.cpp  environment_ompl.cpp
sbpl/src/planners/: _ppma.cpp.swp  mha_planner.cpp  ppma.cpp  ppma_control.cpp
sbpl/src/test/: ctrl_kinematic_car_test.cpp  kinematic_car_test.cpp  main.cpp  sol.txt
sbpl/src/utils/: BenchmarkOptions.cpp  BenchmarkTypes.cpp  CFGBenchmark.cpp
sbpl_arm_planner/: CMakeLists.txt  manifest.xml  manifest.xml~  temp_build.sh
sbpl_arm_planner/config/: pr2_right_arm.yaml~
sbpl_arm_planner/include/sbpl_arm_planner/: action_set.h  environment_omplrobarm3d.h  environment_robarm3d.h  sbpl_arm_planner_interface.h
sbpl_arm_planner/src/: _environment_omplrobarm3d.cpp.swp  action_set.cpp  environment_omplrobarm3d.cpp  environment_robarm3d.cpp  planning_params.cpp  sbpl_arm_planner_interface.cpp
(+176 files in other folders)
